# retreat-challenge-slack-bot

./: .gitignore  README.md  go.mod  message-example.json  message.json  package.json  publish.sh  pyproject.toml  script.py  vadim.py
cmd/common/: common.go
cmd/example-go/: main.go
cmd/publisher/: main.go
cmd/solution/: main.go
gaetano/: retreat-2022-slack-bot.py
src/: Test.ts  types.ts
