[tool.poetry]
name = "retreat-challenge-slack-bot"
version = "0.1.0"
description = ""
authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
ipython = "^8.7.0"
humanfriendly = "^10.0"
humanize = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
